Bug 467867 - kdialog --slider argument is misdocumented in usage text, result is buggy behaviour
Summary: kdialog --slider argument is misdocumented in usage text, result is buggy beh...
Status: RESOLVED FIXED
Alias: None
Product: kdialog
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.3
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Brad Hards
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-28 01:17 UTC by Michael
Modified: 2023-05-20 01:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael 2023-03-28 01:17:28 UTC
SUMMARY

kdialog's usage help text is missing important arguments for the --slider option. Without knowing what is missing, the resulting dialog does not work.

The min, max, and step values are coded to be optional, but without them, the dialog is useless and appears buggy. Moreover, the slider step value does not have any GUI effect or constrains the return value.

STEPS TO REPRODUCE

1. To see unclear usage text, in Konsole, type: kdialog
...
--slider <text>                   Slider dialog box, returns selected value
...

This line should be:
--slider <text> <min> <max> <step>                   Slider dialog box, returns selected value

https://invent.kde.org/utilities/kdialog/-/blob/master/src/kdialog.cpp#L328

2. Type: kdialog --slider "some text"

This is invoking kdialog as described exactly by the usage text. A dialog will appear with the label "some text", a slider that is stuck at the left, and on my system, by trying to click on the slider thumb, the thumb doesn't move but the entire window does. (I have set the Breeze theme to drag a window when you click in an unused part of a window. With that setting off, nothing happens.) Either way, a bug.

3. Type: kdialog --slider "some text" 1 100 10

This is invoking kdialog as it intended to be, with min, max and step values. A dialog will appear and the slider is movable. Dragging the thumb and clicking OK returns the result of the thumb. However, the "step" value of 10 does not seem to have any impact on visual or returned step sizes, a bug.

https://invent.kde.org/utilities/kdialog/-/blob/master/src/kdialog.cpp#L1058

4. The link to the kdialog documentation in the README.md file is invalid:

https://invent.kde.org/utilities/kdialog/-/blob/master/README

The only documentation for --slider I could find was someone's blog:

https://mostlylinux.wordpress.com/bashscripting/kdialog/#slider

The following better than nothing, but is out of date:

https://develop.kde.org/docs/administration/kdialog/


SOFTWARE/OS VERSIONS

Operating System: KDE neon 5.27
KDE Plasma Version: 5.27.3
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8
Kernel Version: 5.19.0-35-generic (64-bit)
Graphics Platform: X11
Comment 1 Bug Janitor Service 2023-05-05 20:28:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/documentation/develop-kde-org/-/merge_requests/289
Comment 2 Bug Janitor Service 2023-05-05 20:30:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kdialog/-/merge_requests/24
Comment 3 Albert Astals Cid 2023-05-19 13:13:30 UTC
Git commit bd3082d7880db3e48f2c6113f04a28f837333831 by Albert Astals Cid, on behalf of shenleban tongying.
Committed on 19/05/2023 at 13:07.
Pushed by aacid into branch 'master'.

fix: slider's ticks and related doc
Related: bug 427414

M  +17   -15   src/kdialog.cpp
M  +1    -0    src/widgets.cpp

https://invent.kde.org/utilities/kdialog/commit/bd3082d7880db3e48f2c6113f04a28f837333831
Comment 4 Michael 2023-05-20 01:36:22 UTC
Thank you! 🙏