fix: slider's ticks and related doc

BUG: 467867
BUG: 427414